# nlp-scripts

./: README.md
llama-model-uploader/: .gitignore  Makefile  README.md  pyproject.toml  setup.py
llama-model-uploader/llama_uploader/: __init__.py  cli.py  file_validator.py  hf_uploader.py  model_converter.py  model_tester.py  tokenizer_creator.py  version_detector.py
llama3-2-finetuning/: main.py  pyproject.toml
llama3-2-model-uploader/: README.md  file_validator.py  hf_uploader.py  model_converter.py  model_tester.py  pyproject.toml  requirements.txt  tokenizer_creator.py  upload_model.py
llama3-2-model-uploader/llama_uploader/: __init__.py  cli.py  file_validator.py  hf_uploader.py  model_converter.py  model_tester.py  tokenizer_creator.py
llama32-mlx-finetune/: README.md  main.py  pyproject.toml
llama4-summarizer/: README.md  pyproject.toml  requirements.txt  summarize.py
llama4-summarizer/summaries/: acciones_para_desnaturalizar_el_acoso_sexual_qwen3_summary.txt  introduccion_a_las_medidas_de_reparacion_qwen3_summary.txt  pi_masc_heg_qwen3_summary.txt  protocolo_borrador_final_qwen3_summary.txt  protocolo_galicia_final_qwen3_summary.txt  testigo_proactivo_qwen3_summary.txt
text-normalization/: README.md  main.py  normalize_text.py  pre_processed_text.txt  pyproject.toml  remove_english_tokens.py  save_text_in_list.py  text_preprocessing.py
