[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama32-mlx-finetune"
version = "1.0.0"
description = "Llama 3.2 MLX fine-tuning script"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Juan Vásquez", email = "juanmvs@pm.me"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
llama32-mlx-finetune = "main:main"