[project]
name = "llama4-summarizer"
version = "0.1.0"
description = "document summarization using meta-llama/llama-4-maverick-17b-128e-instruct."
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.0",
    "pypdf>=4.0.0",
]

[project.scripts]
summarize = "summarize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
