[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-normalization"
version = "1.0.0"
description = "Text preprocessing and normalization utilities for NLP"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Juan Vásquez", email = "juanmvs@pm.me"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "nltk>=3.8",
    "beautifulsoup4>=4.12.0",
    "pyspellchecker>=0.7.0",
]

[project.scripts]
text-normalize = "main:main"